<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2016 Steve Leach

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<resources>
    <string name="app_name">Ice Hockey Score Sheet</string>
    <string name="homeText">Home Goal</string>
    <string name="aboutText">By Steve Leach\n\nCopyright &#169; 2016\n\nIcons by design.google.com</string>
    <string name="appVersionText">Version %s</string>
    <string name="defaultHomeTeamName">Home</string>
    <string name="defaultAwayTeamName">Away</string>
    <string name="period">Period</string>
    <string name="homeGoalButtonText">HOME GOAL</string>
    <string name="awayGoalButtonText">AWAY GOAL</string>
    <string name="homePenButtonText">HOME PEN</string>
    <string name="awayPenButtonText">AWAY PEN</string>
    <string name="nextPeriodButtonText">NEXT</string>
    <string name="doneButtonText">DONE</string>
    <string name="gameHistoryTitle">Game History</string>
    <string name="gameReportButton">GAME REPORT</string>
    <string name="helpTitle">Ice Hockey Scoresheet Help</string>
    <string name="scoresheetFolder">Scoresheets</string>
    <string name="gameSaves">Saved game files</string>
    <string name="gameLoadHint">Tap to load, long tap for options</string>
    <string name="confirmAlertTitle">Are you sure?</string>
    <string name="saveGamePrompt">Do you want to save the game data to a new file? This will not affect any existing saved game files.</string>
    <string name="loadGamePrompt">Do you want to load game details from this file (%s)?</string>
    <string name="deleteGamePrompt">Do you want to delete this saved game file (%s)?</string>
    <string name="clearEventsPrompt">Do you want to clear all events and start recording a new game?</string>
    <string name="deleteEventPrompt">Do you want to delete this game event (%s)?</string>
    <string name="yesOption">Yes</string>
    <string name="noOption">No</string>
    <string name="overTimeAbbrev">OT</string>
    <string name="goalScoredTitle">%s Goal Scored</string>
    <string name="penaltyTitle">%s Penalty</string>
    <string name="historyListGoal">%s goal</string>
    <string name="historyListGoalDetail" formatted="false">Scored by %s (%s)</string>
    <string name="historyListGoalDetail1a" formatted="false">Scored by %s from %d (%s)</string>
    <string name="historyListGoalDetail2a" formatted="false">Scored by %s from %d and %d (%s)</string>
    <string name="historyListPenalty">%s penalty</string>
    <string name="historyListPenaltyDetail" formatted="false">Player %s, %sm (%s)</string>
    <string name="historyListPeriod">Period %s end</string>
    <string name="txtReportHomeTeamTitle">HOME - TEAM</string>
    <string name="fileMenuOpenText">Open</string>
    <string name="fileMenuDeleteText">Delete</string>
    <string name="fileMenuRenameText">Rename</string>
    <string name="newName">New name:</string>
    <string name="currentName">Current name:</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="renameTitle">Rename %s</string>
    <string name="gameDetailsTitle">Game details</string>
    <string name="homeTeamLabel">Home team:</string>
    <string name="awayTeamLabel">Away team:</string>
    <string name="venueLabel">Venue:</string>
    <string name="txtBenchPanaltyHint">Use 0 for a bench penalty</string>
    <string name="benchShortCode">BCH</string>
    <string name="reportTeamHeader">%s - TEAM</string>
    <string name="reportGoalsHeader">SCORING - %s</string>
    <string name="reportPenaltiesHeader">PENALTIES - %s</string>
    <string name="reportFragmentTitle">Game Report</string>
    <string name="reportGoalTableHeaders">TIME,TYPE,G,A,A</string>
    <string name="reportPenaltyTableHeaders">NO,PIM,OFFENCE,GIVEN,START,END</string>
    <string name="reportTeamTableHeaders">No,Name,G,A,PIM</string>
    <string name="reportScoresTableHeaders">PERIOD SCORES,1,2,3,OT,TOT</string>
    <string name="reportAllPensTableHeaders">PENALTY MINS,1,2,3,OT,TOT</string>
    <string name="reportAssistsTableHeaders">ASSISTS,1,2,3,OT,TOT</string>
    <string name="periodAbbrevs">1st,2nd,3rd,OT</string>
    <string name="historyMenuEditText">Edit event</string>
    <string name="historyMenuDeleteText">Delete event</string>
    <string name="textPenPlusMinsPrompt">plus</string>
    <string name="playersHeader">%s Players</string>
    <string name="addPlayerButtonText">Add Player</string>
    <string name="playersButtonText">Players</string>
    <string name="playersNumHeader">Num</string>
    <string name="playersNameHeader">Name</string>
    <string name="playersActiveHeader">Active?</string>
    <string name="saveTeamPlayersPrompt">Do you want to save this player list for reuse in future games?</string>
    <string name="teamSavedMessage">Saved team to %s</string>
    <string name="teamNotSavedMessage">Error saving %s!</string>
    <string-array name="goalCodes">
        <item>E</item>
        <item>PP</item>
        <item>SH</item>
        <item>DP</item>
        <item>PS</item>
        <item>PG</item>
        <item>ENG</item>
    </string-array>
    <string-array name="penaltyCodes">
        <item>ABUSE</item>
        <item>ADJ-E</item>
        <item>ATT-B</item>
        <item>ATT-K</item>
        <item>ATT-S</item>
        <item>ALTRC</item>
        <item>BENCH</item>
        <item>BDYCH</item>
        <item>BOARD</item>
        <item>BR-ST</item>
        <item>BUT-E</item>
        <item>CHARG</item>
        <item>CHE-B</item>
        <item>CLIP</item>
        <item>CROSS</item>
        <item>DAN-E</item>
        <item>DELAY</item>
        <item>DIS-N</item>
        <item>ELBOW</item>
        <item>EX-RP</item>
        <item>F-OFF</item>
        <item>FAL-P</item>
        <item>FIGHT</item>
        <item>GA-MI</item>
        <item>GR-MI</item>
        <item>HANDP</item>
        <item>H-BUT</item>
        <item>HI-ST</item>
        <item>HOLD</item>
        <item>HO-MA</item>
        <item>HO-ST</item>
        <item>HOOK</item>
        <item>IL-EQ</item>
        <item>IL-ST</item>
        <item>INTRF</item>
        <item>INT-S</item>
        <item>KICK</item>
        <item>KNEE</item>
        <item>L-CRE</item>
        <item>L-PEB</item>
        <item>L-PLB</item>
        <item>MATCH</item>
        <item>MISC</item>
        <item>MOLST</item>
        <item>OBS-L</item>
        <item>PEN-S</item>
        <item>P-GRE</item>
        <item>P-HOL</item>
        <item>P-OUT</item>
        <item>REFUS</item>
        <item>ROUGH</item>
        <item>SLASH</item>
        <item>SPEAR</item>
        <item>STA-L</item>
        <item>THR-P</item>
        <item>THR-S</item>
        <item>TOO-M</item>
        <item>TRIP</item>
        <item>UN-SP</item>
        <item>UNN-R</item>
    </string-array>
</resources>
