<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gameDetailsTitle"
            android:id="@+id/textView5" android:layout_gravity="center_horizontal" style="@style/AppHeader"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView4" android:layout_gravity="center_horizontal">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:padding="4dp">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:padding="4dp">
                <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/homeTeamLabel"
                        android:id="@+id/textView17"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fldHomeTeamName" android:layout_weight="1" android:inputType="textCapWords|text"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/playersButtonText"
                        android:id="@+id/btnHomePlayers"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:padding="4dp" android:weightSum="1">
                <TextView android:layout_width="160dp" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/awayTeamLabel"
                          android:id="@+id/textView18"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fldAwayTeamName" android:inputType="textCapWords|text"
                        android:layout_weight="1"/>
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/playersButtonText" android:id="@+id/btnAwayPlayers"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                          android:layout_height="match_parent" android:padding="4dp">
                <TextView android:layout_width="160dp" android:layout_height="wrap_content"
                              android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/venueLabel"
                              android:id="@+id/textView20"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fldGameVenue" android:layout_weight="1" android:inputType="textCapWords|text"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:padding="4dp" android:weightSum="1"
                    android:visibility="invisible">
                <TextView android:layout_width="160dp" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceLarge" android:text="Date:"
                          android:id="@+id/textView19"/>
                <EditText
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/fldGameDate" android:layout_weight="0.23"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                          android:layout_height="match_parent" android:padding="4dp" android:weightSum="1">
                <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.36"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/doneButtonText"
                        android:id="@+id/btnGameOK" style="@style/AppButton"
                        android:background="@drawable/buttonshape"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>